# patchpilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gen_report_doc.py  pipeline.py  pipeline_stages.py  pyproject.toml  supervisor.py  产品需求.txt  关于智能体plan.txt
agents/: base.py  claude_code.py  codex.py  registry.py  result_utils.py  router.py
agents/aggregator/: agent.py
agents/context_agent/: agent.py
agents/debug_agent/: agent.py
agents/github_agent/: agent.py
agents/integrator/: agent.py
agents/orchestrator/: agent.py  prompts.py
agents/review_agent/: agent.py
agents/test_agent/: agent.py
agents/worker/: agent.py  prompts.py  workspace.py
config/: claude_agent.py  codex.py  llm.py  logging.py  settings.py
diagnostics/: health_check.py
docs/: project-development-status.md
docs/decisions/: ADR-001-gateway-entrypoint-custom-pipeline-backend.md
features/readme/: test_task-01.py
integrations/: package.json  pnpm-lock.yaml  tsconfig.json
integrations/src/: index.ts  pipeline.ts
libs/: permissions.py
models/: __init__.py  board.py  context.py  decision.py  errors.py  events.py  github.py  patch.py  task.py
persistence/: run_state.py
telemetry/: __init__.py  __main__.py  execution_log.py  log_stats.py  log_viewer.py  metrics.py  router_safety.py  spans.py
tests/integration/: test_smoke.py
tests/unit/: test_agent_event.py  test_agent_fallback.py  test_agent_router.py  test_aggregator.py  test_claude_code_agent.py  test_codex_agent.py  test_context_agent.py  test_health_check.py  (+29 more)
(+7 files in other folders)
